Change wording to Section 1

--- a/Project_2/student_intervention/student_intervention.ipynb
+++ b/Project_2/student_intervention/student_intervention.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "---\n",
     "\n",
-    "This is a classic classification problem because we are trying to predict a binary outcome - will the student pass or fail.\n",
+    "This is a classic classification problem because we are trying to predict a discre binary outcome - whether the student will pass or fail.\n",
     "\n",
     "---"
    ]
