Remove final LogReg model training output

--- a/Project_2/student_intervention/student_intervention.ipynb
+++ b/Project_2/student_intervention/student_intervention.ipynb
@@ -3325,7 +3325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -3334,7 +3334,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n"
+      "Fitting 5 folds for each of 30 candidates, totalling 150 fits\n",
+      "\n"
      ]
     },
     {
@@ -3343,28 +3344,11 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Done 150 out of 150 | elapsed:    0.7s finished\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "GridSearchCV(cv=5, error_score='raise',\n",
-       "       estimator=LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False),\n",
-       "       fit_params={}, iid=True, n_jobs=-1,\n",
-       "       param_grid={'penalty': ['l1', 'l2'], 'C': [0.05, 0.001, 0.01, 0.1, 1, 10, 100, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]},\n",
-       "       pre_dispatch='2*n_jobs', refit=True,\n",
-       "       scoring=make_scorer(f1_score, pos_label=yes), verbose=1)"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr_grid_search.fit(X_train_scaled, y_train)"
+    "lr_grid_search.fit(X_train_scaled, y_train)\n",
+    "print \"\""
    ]
   },
   {
