Change graduation rate to proper % (Section 2); Clarify model prediction (Section 5)

--- a/Project_2/student_intervention/student_intervention.ipynb
+++ b/Project_2/student_intervention/student_intervention.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -110,7 +110,7 @@
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Number of features: 31\n",
-      "Graduation rate of the class: 0.67%\n"
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "n_features = student_data.shape[1]\n",
     "n_passed = student_data['passed'].value_counts().loc['yes']\n",
     "n_failed = student_data['passed'].value_counts().loc['no']\n",
-    "grad_rate = n_passed / float(n_passed + n_failed)\n",
+    "grad_rate = (n_passed / float(n_passed + n_failed)) * 100\n",
     "print \"Total number of students: {}\".format(n_students)\n",
     "print \"Number of students who passed: {}\".format(n_passed)\n",
     "print \"Number of students who failed: {}\".format(n_failed)\n",
@@ -3808,11 +3808,11 @@
     "collapsed": true
    },
    "source": [
-    "The final Logistic Regression model uses positive and negative weights to multiply against each variable. It then takes a linear combination of all of these variables and their weights and squashes that score between 0 and 1. This is then the probability of the student passing. \n",
+    "The final Logistic Regression model uses positive and negative weights to multiply against each variable. It then adds up of all of these variables multiplied by each of their weights into a single final score. Finally, it squashes that final score into a number between 0 and 1. This is then the probability of the student passing. \n",
     "\n",
-    "If the probability is over 50%, the model predicts that the student will pass, if not, it predicts the student will fail.\n",
+    "If the probability is over 50%, the model predicts that the student will pass, and if not, it predicts the student will fail.\n",
     "\n",
-    "This particular model had the added benefit of shrinking many weights zero, effectively saying that their contribution to the overall score is zero. Thus this only gives us a sub-selection of the most important variables for identifying passing and failing students."
+    "This particular model had the added benefit of shrinking many weights zero, effectively saying that the variable for that weight gave zero contribution to the final score. Thus this gives us a sub-selection of the most important variables for identifying passing and failing students."
    ]
   },
   {
