Add draft answers to Questions 9

--- a/Project_3/customer_segments/customer_segments.ipynb
+++ b/Project_3/customer_segments/customer_segments.ipynb
@@ -1834,9 +1834,7 @@
     "\n",
     "It also seemed to better handle the outlier high volume stores, without distorting the probabilistic boundaries in the denser area near the origin.\n",
     "\n",
-    "Conversely, K-means seemed to require assumptions like spherical clusters, equal variance, hard assignments, etc. (discussed in more detail earlier in K-means weaknesses) that didn't necessarily apply to our data.\n",
-    "\n",
-    "---"
+    "Conversely, K-means seemed to require assumptions like spherical clusters, equal variance, hard assignments, etc. (discussed in more detail earlier in K-means weaknesses) that didn't necessarily apply to our data.\n"
    ]
   },
   {
@@ -1858,13 +1856,23 @@
    "source": [
     "__Answer:__\n",
     "\n",
-    "I might use GMM to identify and target specific clusters/types of customers with specific delivery times. \n",
+    "I might use GMM to identify and target specific clusters/types of customers with specific delivery schedules.\n",
     "\n",
-    "We have a cluster of small businesses dealing in mostly 'Fresh' products who would want regular morning deliveries.\n",
+    "Once identified, I would test changes to delivery schedules to random (experiment) customers who were near the centers of these different clusters. This is to ensure the highest probability that this change might be appropriate and not generate complaints and customer loss. The changes tested regular/bulk and morning/night would depend on the cluster in question.\n",
     "\n",
-    "Other smaller to mid-size groups ordering very little fresh in comparison to other types of prodcuts might want regular or semi-regular night deliveries.\n",
+    "---\n",
     "\n",
-    "The larger clusters/types might prefer bulk deliveries. Though they might prefer more regular/earlier deliveries as well if they specialize in Fresh products."
+    "We have a cluster of small businesses dealing in mostly 'Fresh' products who would want regular morning deliveries. These might be unchanged at first since they are the most likely to require regular morning deliveries.\n",
+    "\n",
+    "Other smaller to lower mid-size groups ordering very little fresh in comparison to other types of products might be ok if switched to regular or semi-regular night deliveries.\n",
+    "\n",
+    "The upper mid-size to larger clusters/types might be ok with bulk deliveries. Though they might prefer more regular/earlier deliveries as well if they specialize in Fresh products.\n",
+    "\n",
+    "--\n",
+    "\n",
+    "Then once changes are made for this random subset in each cluster, we can measure the difference over a specified amount of time between complaints/customers lost versus the unchanged (control) subset in each cluster. This would basically amount to using hypothesis testing techniques to analyze any changes made.\n",
+    "\n",
+    "Note: We might also have to be careful with this analysis since 'new experience' reactions (change aversion) can be unavoidable to some degree when some fundamental changes to services are made. We also have make sure the length of time to allow customers to adjust is sufficient enough to make a robust decision."
    ]
   },
   {
