Add draft answers to Questions 10

--- a/Project_3/customer_segments/customer_segments.ipynb
+++ b/Project_3/customer_segments/customer_segments.ipynb
@@ -1870,7 +1870,7 @@
     "\n",
     "--\n",
     "\n",
-    "Then once changes are made for this random subset in each cluster, we can measure the difference over a specified amount of time between complaints/customers lost versus the unchanged (control) subset in each cluster. This would basically amount to using hypothesis testing techniques to analyze any changes made.\n",
+    "Then once changes are made for this random subset in each cluster, we can measure the difference over a specified amount of time for complaints/customers lost versus the unchanged (control) subset in each cluster. This would basically amount to using hypothesis testing and significance testing techniques to analyze the effects of any changes made.\n",
     "\n",
     "Note: We might also have to be careful with this analysis since 'new experience' reactions (change aversion) can be unavoidable to some degree when some fundamental changes to services are made. We also have make sure the length of time to allow customers to adjust is sufficient enough to make a robust decision."
    ]
@@ -1888,22 +1888,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "__Answer:__\n",
     "\n",
-    "I would predict current future customer needs by the cluster they were in, and how close to the center of cluster they are in. I might also contact those near the borders for their preferences as they are closer to belonging to two different gaussians/clusters.\n",
+    "Once we have robust model, we could predict current customers' future scheduling needs depending on the their orders, which cluster they were in, and how close to the cluster center they are. We could also contact those near the borders for their explicit feelings towards changes as they are closer to belonging to two different Gaussians/clusters.\n",
     "\n",
-    "For future customers, it's simply a matter of projecting their first orders (or predicted orders) into this space using the PC components and GMM means to see where they might best fit into our shipping plans.\n",
+    "For future customers, it's simply a matter of projecting their first orders (or predicted orders) into this space using the PC components and GMM means to see where they might best fit into the initial shipping plans.\n",
     "\n",
-    "And of course, continually updating our models as we get more data. This is especially true once we start to get data on who are happy with whichever shipping plans they end up on, because then it becomes a supervised learning problem."
+    "And of course, continually updating our models as we get more data. This is especially true once we start to get data on our customers' attitudes towards our services. This can be attained with customer surveys with yes/no questions and Likert scale ratings. More individual customer data such demographics might also help as well.\n",
+    "\n",
+    "Through surveys, we can find which customers are happy with whichever schedules they are on, and to what extent. Once we have a this information (i.e. a dependent/target variable to predict), this becomes a much more defined supervised learning problem that can be approached with any myriad techniques.\n",
+    "\n",
+    "This might include using our PCA components and cluster assignments as input to Linear Regression, Random Forests, SVM, Nueral Networks, etc to predict customer sentiment (survey results.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
