Address feedback for Q8
Q8
Reviewer Comments
There is nothing wrong with your answer per se. However, this question is about PCA v.s. ICA. Would you be able to adjust your answer to reflect this in your next submission?
I understand that the working of the question is vague - we will change that soon!

--- a/Project_3/customer_segments/Customer_Segments.ipynb
+++ b/Project_3/customer_segments/Customer_Segments.ipynb
@@ -1102,7 +1102,7 @@
     "\n",
     "#### Question 5:\n",
     "\n",
-    "What are the advantages of using K Means clustering or Gaussian Mixture Models?\n",
+    "What are the advantages of using K-Means clustering or Gaussian Mixture Models?\n",
     "\n",
     "### K-means:\n",
     "\n",
@@ -1124,13 +1124,13 @@
     "\n",
     "__Strengths__:\n",
     "\n",
-    "Speed. In practice, KMeans is one of the [fastest clustering algorithms available.](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) Its average complexity is $O(k*n*i)$ where n is the number of samples, k is the number of clusters, and i is the number of iterations. Kmeans tends to get stuck at local minima, so it is generally reinitialized (10 times by default in sklearn.)\n",
+    "___Speed.___ In practice, K-Means is one of the [fastest clustering algorithms available.](http://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) Its average complexity is $O(k*n*i)$ where n is the number of samples, k is the number of clusters, and i is the number of iterations. K-Means tends to get stuck at local minima, so it is generally reinitialized at least a few times (10 times by default in sklearn.)\n",
     "\n",
     "Sklearn's implementation also employs [Lloyd's algorithm](https://en.wikipedia.org/wiki/Lloyd%27s_algorithm) which is considered ['linear' in practice](https://en.wikipedia.org/wiki/K-means_clustering) and can precompute/cache distances used as well for speed.\n",
     "\n",
-    "It can also terminate early if a local minima is found before i iterations are exhausted. Because of these myriad factors, exact theoretical comparisons of speed to Gaussian Mixture Model for this dataset would be hard to say except that it would almost definitely be faster.\n",
+    "It can also terminate early if a local minima is found before i iterations are exhausted. Because of these myriad factors, exact theoretical comparisons of speed with respect to Gaussian Mixture Models (GMM) for this dataset using sklearn's implementations would be hard to say except that it would almost definitely be faster since GMM doesn't have quite as many optimizations/relaxed assumptions.\n",
     "\n",
-    "Luckily, we can compare training times in our comparison analysis in the next section at arrive at about 30% faster train time.\n",
+    "Luckily, we will compare training times in our comparison analysis in the next section, and arrive at about 30% faster train time than GMM.\n",
     "\n",
     "__Weaknesses__:\n",
     "\n",
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -1356,7 +1356,7 @@
        "9   4823.634354  13480.559205"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,6 +2012,18 @@
     "#### Question 8:\n",
     "\n",
     "Which of these techniques did you feel gave you the most insight into the data?\n",
+    "\n",
+    "##### PCA vs. ICA\n",
+    "\n",
+    "PCA seemed to give more insight into our data, especially when paired with a Gaussian Mixture Model for granularity. \n",
+    "\n",
+    "First and foremost, PCA allowed us to capture the vast majority of the variation in our dataset into two easily visualizable and plottable PCA components. \n",
+    "\n",
+    "From there, we could break it up into intuitive clusters within those PCA's, and visualize distinct groups of customers.\n",
+    "\n",
+    "This provided valuable insight that wasn't readily apparent at the beginning of our analysis.\n",
+    "\n",
+    "##### Gaussian Mixture Models vs. K-means\n",
     "\n",
     "Gaussian Mixture Models (GMM) seemed to carry the right assumptions for our data. Gaussian distributions with different means seemed to better model the elliptical distributions of our data.\n",
     "\n",
