Clear up language in 'General Trends' opening section

--- a/Project 1/boston_housing/Boston Housing.ipynb
+++ b/Project 1/boston_housing/Boston Housing.ipynb
@@ -1278,7 +1278,7 @@
     "\n",
     "At a very small training set size, no good model of the data can be learned on such little data and test error is high regardless of which max depth is used.\n",
     "\n",
-    "As the training set size increases, the model has more data to learn on, and the test error drops accordingly. \n",
+    "As the training set size increases, the model has more data to learn on, and the test error drops accordingly, up to a limit (discussed further in the next section on train/test error convergence.) \n",
     "\n",
     "### Training Error\n",
     "\n",
@@ -1325,6 +1325,15 @@
     "\n",
     "For now, depths 4-5 looks to be the best depths that minimize overfitting and error with our data available."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
